[package]
name = "leptos-material"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
leptos = "0.2.1"
leptos_meta = "0.2.1"
leptos_router = { version = "0.2.1", features = ["hydrate"] }
log = "0.4"
once_cell = "1"
paste = "1"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration", "DomRect", "DomStringMap", "Element", 
    "EventTarget", "IntersectionObserver", "Performance", "Touch", "TouchEvent", "TouchList"] }
wasm-bindgen = { version = "0.2" }
